# import-hacking-fixer

./: .gitignore  .pre-commit-config.yaml  README.md  ihf  import_hacking_fixer.py  pyproject.toml  setup.py  test_comparison.py  test_complete_fix.py  test_group_separation.py  test_hacking_comparison.py  test_simple.py  test_with_docstring.py  tox.ini
.github/workflows/: ci.yml
import_hacking_fixer/: __init__.py  cli.py  core.py  docstring_rules.py  parser.py  rules.py  style_rules.py
tests/: test_import_hacking_fixer.py  test_parser_and_rules.py  test_style_rules.py
