[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "import-hacking-fixer"
version = "0.1.0"
description = "Command-line tool to check and fix Python imports according to OpenStack hacking rules"
authors = [{ name = "", email = "" }]
license = { text = "MIT" }
requires-python = ">=3.7"

[project.scripts]
ihf = "import_hacking_fixer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["import_hacking_fixer*"]
