[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "import-hacking-fixer"
version = "0.1.0"
description = "Command-line tool to check and fix Python imports according to OpenStack hacking rules"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Damani", email = "damani4242@gmail.com" }]
dependencies = [
    "click",
    "tomli; python_version < '3.11'"
]

[project.scripts]
ihf = "import_hacking_fixer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["import_hacking_fixer*"]
